test/asm/invalid-format.err
error: STRFMT: Invalid format spec for argument 2
    at invalid-format.asm(1)
error: STRFMT: Invalid format spec for argument 2
    at invalid-format.asm(2)
error: STRFMT: Invalid format spec for argument 2
    at invalid-format.asm(3)
error: STRFMT: Invalid format spec for argument 2
    at invalid-format.asm(4)
error: Fixed-point constant precision 0 invalid, defaulting to 16
    at invalid-format.asm(5)
error: STRFMT: Invalid format spec for argument 2
    at invalid-format.asm(5)
error: Invalid format spec "5d5"
    at invalid-format.asm(8)
error: Invalid format spec "xx"
    at invalid-format.asm(9)
error: Formatting string with sign flag '+'
    at invalid-format.asm(11)
error: Formatting string with padding flag '0'
    at invalid-format.asm(12)
error: Formatting string with fractional width
    at invalid-format.asm(13)
error: Formatting string with fractional precision
    at invalid-format.asm(14)
error: Formatting type 'd' with exact flag '#'
    at invalid-format.asm(16)
error: Formatting type 'd' with fractional width
    at invalid-format.asm(17)
error: Formatting type 'd' with fractional precision
    at invalid-format.asm(18)
Assembly aborted with 15 errors!
